test/sema/traits/trait_redeclared.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
trait A {}

// CHECK: [[# @LINE + 1 ]]:7: error: redeclaration of 'A'
trait A {}

fn main() {}
